--- a/erp/src/main/resources/application.yml
+++ b/erp/src/main/resources/application.yml
@@ -1,3 +1,22 @@
+# 服务端口
 server:
+  port: 8080
   servlet:
     context-path: /erp
+# 服务名
+spring:
+  application:
+    name: erp
+  # 环境配置: dev、test、prod
+  profiles:
+    active: dev
+  # 数据库连接
+  datasource:
+    username: root
+    password: root
+    url: jdbc:mysql://localhost:3306/erp?useUnicode=true&&characterEncoding=utf8&&useSSL=false&&serverTimezone=Asia/Shanghai
+    driver-class-name: com.mysql.cj.jdbc.Driver
+# mybatis-plus日志
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
