--- a/erp_parent/erp_company/src/main/resources/application.yml
+++ b/erp_parent/erp_company/src/main/resources/application.yml
@@ -1,14 +1,28 @@
+# 服务端口
 server:
-  port: 9001
+  port: 8080
+# 服务名
 spring:
   application:
-    name: ihrm-company #指定服务名
+    name: erp_company
+  # 环境配置: dev、test、prod
+  profiles:
+    active: dev
+  # 数据库连接
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/erp?useUnicode=true&&characterEncoding=utf8&&useSSL=false&&serverTimezone=Asia/Shanghai
     username: root
-    password: 111111
-  jpa:
-    database: MySQL
-    show-sql: true
-    open-in-view: true
+    password: 123456
+    url: jdbc:mysql://localhost:3306/erp?useUnicode=true&&characterEncoding=utf8&&useSSL=false&&serverTimezone=Asia/Shanghai
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: Asia/Shanghai
+mybatis-plus:
+  # mybatis-plus日志
+  #  configuration:
+  #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    db-config:
+      logic-delete-field: flag  # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
+      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
+      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
