--- a/erp_parent/erp_common/pom.xml
+++ b/erp_parent/erp_common/pom.xml
@@ -48,6 +48,10 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
