1.新建系统管理模块 2.user表设计

--- a/erp_parent/pom.xml
+++ b/erp_parent/pom.xml
@@ -5,6 +5,7 @@
     <modules>
         <module>erp_common</module>
         <module>erp_company</module>
+        <module>erp_system</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
