--- a/erp_parent/erp_company/src/main/resources/application.yml
+++ b/erp_parent/erp_company/src/main/resources/application.yml
@@ -26,3 +26,5 @@ mybatis-plus:
       logic-delete-field: flag  # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+  mapper-locations: classpath*:mapper/**/*.xml #配合MapScan使用
+  type-aliases-package: com.yang.company.entity
